Count only completed mining and add metin break effects